force-app/main/default/objects/Event__c/Event__c.object-meta.xml
<CustomObject>
    <description>Represents an event managed by Sahra Experiences, covering Corporate, Social, and Public event lines.</description>
    <label>Event</label>
    <nameField>
        <label>Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>