force-app/main/default/objects/Event__c/fields/Active_Tier_Capacity_Sum__c.field-meta.xml
<CustomField>
    <fullName>Active_Tier_Capacity_Sum__c</fullName>
    <label>Active Tier Capacity Sum</label>
    <summarizedField>Ticket_Tier__c.Quantity_Available__c</summarizedField>
    <summaryFilterItems>
        <field>Ticket_Tier__c.Status__c</field>
        <operation>notEqual</operation>
        <value>Closed</value>
    </summaryFilterItems>
    <summaryForeignKey>Ticket_Tier__c.Sahra_Event__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>