force-app/main/default/objects/Event__c/fields/Annual_Event_Budget__c.field-meta.xml
<CustomField>
    <fullName>Annual_Event_Budget__c</fullName>
    <label>Annual Event Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>