force-app/main/default/objects/Event__c/fields/Catering_Vendor_Count__c.field-meta.xml
<CustomField>
    <fullName>Catering_Vendor_Count__c</fullName>
    <label>Catering Vendor Count</label>
    <summaryForeignKey>Event_Vendor__c.Event__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>