force-app/main/default/objects/Event__c/fields/Catering_Waiver_Reason__c.field-meta.xml
<CustomField>
    <fullName>Catering_Waiver_Reason__c</fullName>
    <label>Catering Waiver Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>