force-app/main/default/objects/Event__c/fields/CCO_Approved__c.field-meta.xml
<CustomField>
    <fullName>CCO_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked when the Chief Commercial Officer approves the event. Required for events with a Quoted Price above 1,500,000.</description>
    <label>CCO Approved</label>
    <type>Checkbox</type>
</CustomField>