force-app/main/default/objects/Event__c/fields/Ceremony_Type__c.field-meta.xml
<CustomField>
    <fullName>Ceremony_Type__c</fullName>
    <label>Ceremony Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Religious</fullName>
            </value>
            <value>
                <fullName>Civil</fullName>
            </value>
            <value>
                <fullName>Cultural</fullName>
            </value>
            <value>
                <fullName>Symbolic</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>