force-app/main/default/objects/Event__c/fields/Checklist_Final_Milestone_Paid__c.field-meta.xml
<CustomField>
    <fullName>Checklist_Final_Milestone_Paid__c</fullName>
    <formula>IF(Final_Milestone_Paid_Count__c &gt;= 1, &quot;✅ Complete&quot;, &quot;❌ Missing&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Checklist Final Milestone Paid</label>
    <type>Text</type>
</CustomField>