force-app/main/default/objects/Event__c/fields/Checklist_Retrospective_Captured__c.field-meta.xml
<CustomField>
    <fullName>Checklist_Retrospective_Captured__c</fullName>
    <formula>IF(NOT(ISBLANK(Retrospective_Notes__c)), &quot;✅ Complete&quot;, &quot;❌ Missing&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Checklist Retrospective Captured</label>
    <type>Text</type>
</CustomField>