force-app/main/default/objects/Event__c/fields/Checklist_Satisfaction_Captured__c.field-meta.xml
<CustomField>
    <fullName>Checklist_Satisfaction_Captured__c</fullName>
    <formula>IF(NOT(ISBLANK(Client_Satisfaction_Rating__c)), &quot;✅ Complete&quot;, &quot;❌ Missing&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Checklist Satisfaction Captured</label>
    <type>Text</type>
</CustomField>