force-app/main/default/objects/Event__c/fields/Checklist_Testimonial_Captured__c.field-meta.xml
<CustomField>
    <fullName>Checklist_Testimonial_Captured__c</fullName>
    <formula>IF(
  OR(
    NOT(Client_Consented_to_Testimonial__c),
    AND(Client_Consented_to_Testimonial__c, NOT(ISBLANK(Client_Testimonial__c)))
  ),
  &quot;✅ Complete&quot;,
  &quot;❌ Missing&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Checklist Testimonial Captured</label>
    <type>Text</type>
</CustomField>