force-app/main/default/objects/Event__c/fields/Checklist_Vendors_Delivered__c.field-meta.xml
<CustomField>
    <fullName>Checklist_Vendors_Delivered__c</fullName>
    <formula>IF(
  AND(
    Vendor_Assignment_Total_Count__c &gt; 0,
    Vendor_Assignment_Delivered_Count__c = Vendor_Assignment_Total_Count__c
  ),
  &quot;✅ Complete&quot;,
  IF(
    Vendor_Assignment_Total_Count__c = 0,
    &quot;✅ No Vendors Assigned&quot;,
    &quot;❌ Missing&quot;
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Checklist Vendors Delivered</label>
    <type>Text</type>
</CustomField>