force-app/main/default/objects/Event__c/fields/Client_Consented_to_Testimonial__c.field-meta.xml
<CustomField>
    <fullName>Client_Consented_to_Testimonial__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Client Consented to Testimonial</label>
    <type>Checkbox</type>
</CustomField>