force-app/main/default/objects/Event__c/fields/Client_Organization__c.field-meta.xml
<CustomField>
    <fullName>Client_Organization__c</fullName>
    <label>Client Organization</label>
    <required>true</required>
    <type>Lookup</type>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Events</relationshipLabel>
    <relationshipName>Events</relationshipName>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>