force-app/main/default/objects/Event__c/fields/Client_Satisfaction_Captured__c.field-meta.xml
<CustomField>
    <fullName>Client_Satisfaction_Captured__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Client Satisfaction Captured</label>
    <type>Checkbox</type>
</CustomField>