force-app/main/default/objects/Event__c/fields/Client_Satisfaction_Rating__c.field-meta.xml
<CustomField>
    <fullName>Client_Satisfaction_Rating__c</fullName>
    <label>Client Satisfaction Rating</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>