force-app/main/default/objects/Event__c/fields/Client_Testimonial__c.field-meta.xml
<CustomField>
    <fullName>Client_Testimonial__c</fullName>
    <label>Client Testimonial</label>
    <type>TextArea</type>
</CustomField>