force-app/main/default/objects/Event__c/fields/Completed_Consultations_Count__c.field-meta.xml
<CustomField>
    <fullName>Completed_Consultations_Count__c</fullName>
    <label>Completed Consultations Count</label>
    <summaryFilterItems>
        <field>Consultation__c.Consultation_Status__c</field>
        <operation>equals</operation>
        <value>Completed</value>
    </summaryFilterItems>
    <summaryForeignKey>Consultation__c.Social_Event__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>