force-app/main/default/objects/Event__c/fields/Confirmed_Headcount__c.field-meta.xml
<CustomField>
    <fullName>Confirmed_Headcount__c</fullName>
    <label>Confirmed Headcount</label>
    <summarizedField>Guest__c.Calculated_Headcount__c</summarizedField>
    <summaryFilterItems>
        <field>Guest__c.RSVP_Status__c</field>
        <operation>equals</operation>
        <value>Confirmed</value>
    </summaryFilterItems>
    <summaryForeignKey>Guest__c.Sahra_Event__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>