force-app/main/default/objects/Event__c/fields/Coordinator_Waiver_Reason__c.field-meta.xml
<CustomField>
    <fullName>Coordinator_Waiver_Reason__c</fullName>
    <label>Coordinator Waiver Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>