force-app/main/default/objects/Event__c/fields/Custom_Payment_Plan__c.field-meta.xml
<CustomField>
    <fullName>Custom_Payment_Plan__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Custom Payment Plan</label>
    <type>Checkbox</type>
</CustomField>