force-app/main/default/objects/Event__c/fields/Days_to_Event__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Event__c</fullName>
    <formula>Event_Start_Date__c - TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days to Event</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>