force-app/main/default/objects/Event__c/fields/Decision_Making_Role__c.field-meta.xml
<CustomField>
    <fullName>Decision_Making_Role__c</fullName>
    <label>Decision-Making Role</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Economic Buyer</fullName>
            </value>
            <value>
                <fullName>Technical Buyer</fullName>
            </value>
            <value>
                <fullName>Influencer</fullName>
            </value>
            <value>
                <fullName>End User</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>