force-app/main/default/objects/Event__c/fields/Deposit_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Percentage__c</fullName>
    <label>Deposit Percentage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>