force-app/main/default/objects/Event__c/fields/Dress_Code__c.field-meta.xml
<CustomField>
    <fullName>Dress_Code__c</fullName>
    <label>Dress Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>