force-app/main/default/objects/Event__c/fields/Estimated_Vendor_Spend__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Vendor_Spend__c</fullName>
    <label>Estimated Vendor Spend</label>
    <summarizedField>Event_Vendor__c.Agreed_cost__c</summarizedField>
    <summaryFilterItems>
        <field>Event_Vendor__c.Assignment_Status__c</field>
        <operation>notEqual</operation>
        <value>Cancelled</value>
    </summaryFilterItems>
    <summaryForeignKey>Event_Vendor__c.Event__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>