force-app/main/default/objects/Event__c/fields/Event_Profit_Margin__c.field-meta.xml
<CustomField>
    <fullName>Event_Profit_Margin__c</fullName>
    <label>Event Profit Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>