force-app/main/default/objects/Event__c/fields/Event_Venue__c.field-meta.xml
<CustomField>
    <fullName>Event_Venue__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Select the venue for this event</inlineHelpText>
    <label>Venue</label>
    <referenceTo>venue__c</referenceTo>
    <relationshipName>Event_Venue</relationshipName>
    <type>Lookup</type>
</CustomField>