force-app/main/default/objects/Event__c/fields/Expected_Headcount__c.field-meta.xml
<CustomField>
    <fullName>Expected_Headcount__c</fullName>
    <label>Expected Headcount</label>
    <type>Number</type>
    <precision>6</precision>
    <scale>0</scale>
</CustomField>