force-app/main/default/objects/Event__c/fields/Final_Milestone_Paid__c.field-meta.xml
<CustomField>
    <fullName>Final_Milestone_Paid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Final Milestone Paid</label>
    <type>Checkbox</type>
</CustomField>