force-app/main/default/objects/Event__c/fields/Final_Milestone_Paid_Count__c.field-meta.xml
<CustomField>
    <fullName>Final_Milestone_Paid_Count__c</fullName>
    <label>Final Milestone Paid Count</label>
    <summaryFilterItems>
        <field>Payment_Milestone__c.Name</field>
        <operation>equals</operation>
        <value>Final</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Payment_Milestone__c.Status__c</field>
        <operation>equals</operation>
        <value>Paid</value>
    </summaryFilterItems>
    <summaryForeignKey>Payment_Milestone__c.Event__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>