force-app/main/default/objects/Event__c/fields/Guest_List_Size_Children__c.field-meta.xml
<CustomField>
    <fullName>Guest_List_Size_Children__c</fullName>
    <label>Guest List Size (Children)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>