force-app/main/default/objects/Event__c/fields/Has_Catering_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Has_Catering_Vendor__c</fullName>
    <label>Has Catering Vendor</label>
    <summaryFilterItems>
        <field>Event_Vendor__c.Vendor_Category_Hidden__c</field>
        <operation>equals</operation>
        <value>Catering</value>
    </summaryFilterItems>
    <summaryForeignKey>Event_Vendor__c.Event__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>