force-app/main/default/objects/Event__c/fields/Has_Lead_Coordinator__c.field-meta.xml
<CustomField>
    <fullName>Has_Lead_Coordinator__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Lead Coordinator</label>
    <type>Checkbox</type>
</CustomField>