force-app/main/default/objects/Event__c/fields/Has_Venue__c.field-meta.xml
<CustomField>
    <fullName>Has_Venue__c</fullName>
    <formula>false</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has Venue</label>
    <type>Checkbox</type>
</CustomField>