force-app/main/default/objects/Event__c/fields/Held_Count__c.field-meta.xml
<CustomField>
    <fullName>Held_Count__c</fullName>
    <label>Held Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>