force-app/main/default/objects/Event__c/fields/Internal_Strategic_Notes__c.field-meta.xml
<CustomField>
    <fullName>Internal_Strategic_Notes__c</fullName>
    <label>Internal Strategic Notes</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>