force-app/main/default/objects/Event__c/fields/Is_Readiness_Incomplete__c.field-meta.xml
<CustomField>
    <fullName>Is_Readiness_Incomplete__c</fullName>
    <formula>OR(
    AND( Has_Venue__c = FALSE, ISBLANK(Venue_Waiver_Reason__c) ),
    AND( Catering_Vendor_Count__c = 0, ISBLANK(Catering_Waiver_Reason__c) ),
    AND(  Has_Lead_Coordinator__c  = FALSE, ISBLANK(Coordinator_Waiver_Reason__c) )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Readiness Incomplete</label>
    <type>Checkbox</type>
</CustomField>