force-app/main/default/objects/Event__c/fields/Justification__c.field-meta.xml
<CustomField>
    <fullName>Justification__c</fullName>
    <description>Justification for high discount or high value.</description>
    <label>Justification</label>
    <type>TextArea</type>
</CustomField>