force-app/main/default/objects/Event__c/fields/Lead_Coordinator__c.field-meta.xml
<CustomField>
    <fullName>Lead_Coordinator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead Coordinator</label>
    <referenceTo>User</referenceTo>
    <relationshipName>New_Events</relationshipName>
    <type>Lookup</type>
</CustomField>