force-app/main/default/objects/Event__c/fields/Manager_Approved__c.field-meta.xml
<CustomField>
    <fullName>Manager_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Manager Approved</label>
    <type>Checkbox</type>
</CustomField>