force-app/main/default/objects/Event__c/fields/Payment_Plan_Approved__c.field-meta.xml
<CustomField>
    <fullName>Payment_Plan_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Payment Plan Approved</label>
    <type>Checkbox</type>
</CustomField>