force-app/main/default/objects/Event__c/fields/Plus_One_Policy__c.field-meta.xml
<CustomField>
    <fullName>Plus_One_Policy__c</fullName>
    <label>Plus-One Policy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Allowed</fullName>
            </value>
            <value>
                <fullName>Not Allowed</fullName>
            </value>
            <value>
                <fullName>By Request</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>