force-app/main/default/objects/Event__c/fields/Preferred_Venue__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Venue__c</fullName>
    <label>Preferred Venue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>