force-app/main/default/objects/Event__c/fields/Private_Client__c.field-meta.xml
<CustomField>
    <fullName>Private_Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Private Client</label>
    <referenceTo>Private_Client__c</referenceTo>
    <relationshipName>Events</relationshipName>
    <type>Lookup</type>
</CustomField>