force-app/main/default/objects/Event__c/fields/Public_Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Public_Event_Type__c</fullName>
    <label>Public Event Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Conference</fullName>
            </value>
            <value>
                <fullName>Expo</fullName>
            </value>
            <value>
                <fullName>Workshop Series</fullName>
            </value>
            <value>
                <fullName>Cultural Festival</fullName>
            </value>
            <value>
                <fullName>Concert</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>