force-app/main/default/objects/Event__c/fields/Quoted_Price__c.field-meta.xml
<CustomField>
    <fullName>Quoted_Price__c</fullName>
    <label>Quoted Price</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>