force-app/main/default/objects/Event__c/fields/Retrospective_Notes__c.field-meta.xml
<CustomField>
    <fullName>Retrospective_Notes__c</fullName>
    <label>Retrospective Notes</label>
    <type>TextArea</type>
</CustomField>