force-app/main/default/objects/Event__c/fields/Retrospective_Notes_Entered__c.field-meta.xml
<CustomField>
    <fullName>Retrospective_Notes_Entered__c</fullName>
    <label>Retrospective Notes Entered</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>