force-app/main/default/objects/Event__c/fields/Second_Payment_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Second_Payment_Percentage__c</fullName>
    <label>Second Payment Percentage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>