force-app/main/default/objects/Event__c/fields/Sold_Count__c.field-meta.xml
<CustomField>
    <fullName>Sold_Count__c</fullName>
    <label>Sold Count</label>
    <summaryFilterItems>
        <field>Ticket_Tier__c.Status__c</field>
        <operation>equals</operation>
        <value>Closed</value>
    </summaryFilterItems>
    <summaryForeignKey>Ticket_Tier__c.Sahra_Event__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>