force-app/main/default/objects/Event__c/fields/Special_Requests_Sensitivities__c.field-meta.xml
<CustomField>
    <fullName>Special_Requests_Sensitivities__c</fullName>
    <label>Special Requests / Sensitivities</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>