force-app/main/default/objects/Event__c/fields/Standard_Price__c.field-meta.xml
<CustomField>
    <fullName>Standard_Price__c</fullName>
    <formula>CASE(Event_Type__c,
      &apos;Conference&apos;, 100,
      &apos;Product Launch&apos;, 150,
      &apos;Retreat&apos;, 120,
      &apos;Training&apos;, 80,
      &apos;Wedding&apos;, 200,
      &apos;Engagement&apos;, 150,
      &apos;Anniversary&apos;, 100,
      &apos;Milestone Birthday&apos;, 80,
      &apos;Private Celebration&apos;, 120,
      100) * Expected_Headcount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Standard Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>