force-app/main/default/objects/Event__c/fields/Tickets_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Tickets_Remaining__c</fullName>
    <formula>Total_Capacity__c - Tickets_Sold__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tickets Remaining</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>