force-app/main/default/objects/Event__c/fields/Tickets_Sold__c.field-meta.xml
<CustomField>
    <fullName>Tickets_Sold__c</fullName>
    <label>Tickets Sold</label>
    <summaryForeignKey>Ticket_Tier__c.Sahra_Event__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>