force-app/main/default/objects/Event__c/fields/Total_Quoted__c.field-meta.xml
<CustomField>
    <fullName>Total_Quoted__c</fullName>
    <formula>Quoted_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Quoted</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>