force-app/main/default/objects/Event__c/fields/Total_Ticket_Tier_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Total_Ticket_Tier_Capacity__c</fullName>
    <label>Total Ticket Tier Capacity</label>
    <summarizedField>Ticket_Tier__c.Capacity__c</summarizedField>
    <summaryForeignKey>Ticket_Tier__c.Sahra_Event__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>