force-app/main/default/objects/Event__c/fields/Vendor_Assignment_Delivered_Count__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Assignment_Delivered_Count__c</fullName>
    <label>Vendor Assignment Delivered Count</label>
    <summaryFilterItems>
        <field>Event_Vendor__c.Assignment_Status__c</field>
        <operation>equals</operation>
        <value>Delivered</value>
    </summaryFilterItems>
    <summaryForeignKey>Event_Vendor__c.Event__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>