force-app/main/default/objects/Event__c/fields/Vendor_Assignment_Total_Count__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Assignment_Total_Count__c</fullName>
    <label>Vendor Assignment Total Count</label>
    <summaryForeignKey>Event_Vendor__c.Event__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>