force-app/main/default/objects/Event__c/fields/Vendors_Delivered__c.field-meta.xml
<CustomField>
    <fullName>Vendors_Delivered__c</fullName>
    <formula>IF(
   Checklist_Vendors_Delivered__c  = &quot;Delivered&quot;,
  &quot;✅&quot;,
  &quot;❌&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vendors Delivered</label>
    <type>Text</type>
</CustomField>