force-app/main/default/objects/Event__c/fields/Venue_Waiver_Reason__c.field-meta.xml
<CustomField>
    <fullName>Venue_Waiver_Reason__c</fullName>
    <label>Venue Waiver Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>