force-app/main/default/objects/Event__c/fields/Wrap_Up_Lock_Date__c.field-meta.xml
<CustomField>
    <fullName>Wrap_Up_Lock_Date__c</fullName>
    <description>Auto-set to Event End Date + 30 days when Event transitions to Completed</description>
    <label>Wrap-Up Lock Date</label>
    <type>Date</type>
</CustomField>