force-app/main/default/objects/Event__c/fields/Wrap_Up_Locked__c.field-meta.xml
<CustomField>
    <fullName>Wrap_Up_Locked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>System-managed. Set to TRUE by the nightly flow when 30 days have passed since Event End Date</description>
    <label>Wrap-Up Locked</label>
    <type>Checkbox</type>
</CustomField>