force-app/main/default/objects/Event__c/recordTypes/Public_Event.recordType-meta.xml
<RecordType>
    <fullName>Public_Event</fullName>
    <active>true</active>
    <label>Public Event</label>
</RecordType>