force-app/main/default/objects/Event__c/validationRules/Block_Status_Until_Proposal_Ready.validationRule-meta.xml
<ValidationRule>
    <fullName>Block_Status_Until_Proposal_Ready</fullName>
    <active>true</active>
    <description>Prevents event status from advancing past Inquiry status until all proposal sent validation requirements are cleared.</description>
    <errorConditionFormula>AND(
            OR(
                TEXT(Status__c) = &quot;Proposal Sent&quot;,
                TEXT(Status__c) = &quot;Confirmed&quot;,
                TEXT(Status__c) = &quot;In Planning&quot;,
                TEXT(Status__c) = &quot;Executing&quot;,
                TEXT(Status__c) = &quot;Completed&quot;
            ),
            OR(
                ISBLANK(Expected_Headcount__c),
                ISBLANK(TEXT(Event_Type__c)),
                ISBLANK(Event_Start_Date__c),
                ISBLANK(Quoted_Price__c)
            )
        )</errorConditionFormula>
    <errorMessage>Event status cannot move past Inquiry until the following fields are populated: Expected Headcount, Event Type, Event Start Date, and Quoted Price.</errorMessage>
</ValidationRule>